dynamix/force-app/main/default/objects/communicat_o__Registered_Template__mdt/communicat_o__Registered_Template__mdt.object-meta.xml
<CustomObject>
    <label>Registered Template</label>
    <pluralLabel>Registered Templates</pluralLabel>
</CustomObject>