dynamix/force-app/main/default/objects/communicat_o__Registered_Template__mdt/fields/communicat_o__External_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__External_Template_Id__c</fullName>
    <label>External Template Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>