dynamix/force-app/main/default/objects/communicat_o__Registered_Template__mdt/fields/communicat_o__Language_Code__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Language_Code__c</fullName>
    <label>Language Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_GB</fullName>
                <label>English (UK)</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <default>true</default>
                <label>English (US)</label>
            </value>
            <value>
                <fullName>en</fullName>
                <label>English</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>