dynamix/force-app/main/default/objects/communicat_o__Registered_Template__mdt/fields/communicat_o__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Template_Id__c</fullName>
    <label>Template Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>