dynamix/force-app/main/default/objects/communicat_o__Registered_Template__mdt/fields/communicat_o__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>communicat_o__Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>